Bulding llm update

--- a/Activeloop.ipynb
+++ b/Activeloop.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwPvvZMTpkqd1LqEx5pHdE",
+      "authorship_tag": "ABX9TyOXf3lMShai459K1xiXIYkt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1282,11 +1282,11 @@
         "print(llm(text))"
       ],
       "metadata": {
-        "id": "yPDxlByAVZZR",
-        "outputId": "236e57cd-c2a9-4346-8c71-6274776b72b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yPDxlByAVZZR",
+        "outputId": "236e57cd-c2a9-4346-8c71-6274776b72b9"
       },
       "execution_count": 4,
       "outputs": [
@@ -1322,11 +1322,11 @@
         "    print(cb)"
       ],
       "metadata": {
-        "id": "YEv2tpxwVeK3",
-        "outputId": "256c5569-1b5d-436c-bb41-78edcc660ad8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YEv2tpxwVeK3",
+        "outputId": "256c5569-1b5d-436c-bb41-78edcc660ad8"
       },
       "execution_count": 5,
       "outputs": [
@@ -1422,12 +1422,12 @@
         "chain.run(\"What's the meaning of life?\")"
       ],
       "metadata": {
-        "id": "tDXpPVjnV2vr",
-        "outputId": "ad93d9d8-9bde-4e73-84f3-bffd7fe8138b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "tDXpPVjnV2vr",
+        "outputId": "ad93d9d8-9bde-4e73-84f3-bffd7fe8138b"
       },
       "execution_count": 12,
       "outputs": [
@@ -1452,11 +1452,11 @@
         "!pip install -q huggingface_hub"
       ],
       "metadata": {
-        "id": "QndXKdvAWnvT",
-        "outputId": "8cb33381-2b41-43f3-e427-0edf12088720",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QndXKdvAWnvT",
+        "outputId": "8cb33381-2b41-43f3-e427-0edf12088720"
       },
       "execution_count": 13,
       "outputs": [
@@ -1513,11 +1513,11 @@
         "print(llm_chain.run(question))"
       ],
       "metadata": {
-        "id": "ixan9OvGX2Im",
-        "outputId": "d3d910c6-0d28-4a02-e508-52d03ed85e07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ixan9OvGX2Im",
+        "outputId": "d3d910c6-0d28-4a02-e508-52d03ed85e07"
       },
       "execution_count": 25,
       "outputs": [
@@ -1543,11 +1543,11 @@
         "print( res )"
       ],
       "metadata": {
-        "id": "uDV8ZHupX52s",
-        "outputId": "bf042bf8-0917-4ecc-f2cc-509645f240a0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uDV8ZHupX52s",
+        "outputId": "bf042bf8-0917-4ecc-f2cc-509645f240a0"
       },
       "execution_count": 26,
       "outputs": [
@@ -1586,11 +1586,11 @@
         "print(llm_chain.run(qs_str))"
       ],
       "metadata": {
-        "id": "PFnhC1RXeSZB",
-        "outputId": "7f80dcb0-6184-4154-c404-a90300494d0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PFnhC1RXeSZB",
+        "outputId": "7f80dcb0-6184-4154-c404-a90300494d0d"
       },
       "execution_count": 28,
       "outputs": [
@@ -1661,12 +1661,12 @@
         "summarized_text"
       ],
       "metadata": {
-        "id": "GSswjf5Je22a",
-        "outputId": "a989ac2a-478e-49f2-be5b-fc4c2a95c80e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        }
+        },
+        "id": "GSswjf5Je22a",
+        "outputId": "a989ac2a-478e-49f2-be5b-fc4c2a95c80e"
       },
       "execution_count": 32,
       "outputs": [
@@ -1703,12 +1703,12 @@
         "summarized_text"
       ],
       "metadata": {
-        "id": "61Nwc02nfEA5",
-        "outputId": "a29fc7eb-7b44-4295-98c6-6ec6348c5679",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        }
+        },
+        "id": "61Nwc02nfEA5",
+        "outputId": "a29fc7eb-7b44-4295-98c6-6ec6348c5679"
       },
       "execution_count": 34,
       "outputs": [
@@ -1760,12 +1760,12 @@
         "translated_text"
       ],
       "metadata": {
-        "id": "tJoMS0QyfVFc",
-        "outputId": "574fb186-e8a1-4a88-ef29-7e0de8d111b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "tJoMS0QyfVFc",
+        "outputId": "574fb186-e8a1-4a88-ef29-7e0de8d111b6"
       },
       "execution_count": 37,
       "outputs": [
@@ -1804,12 +1804,12 @@
         "translated_text"
       ],
       "metadata": {
-        "id": "k_yP7PiSfgaZ",
-        "outputId": "076693eb-9379-4095-d9cd-80a7b722efc7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "k_yP7PiSfgaZ",
+        "outputId": "076693eb-9379-4095-d9cd-80a7b722efc7"
       },
       "execution_count": 41,
       "outputs": [
@@ -1848,12 +1848,12 @@
         "translated_text"
       ],
       "metadata": {
-        "id": "NTluqaEOf4v5",
-        "outputId": "ca56924c-1807-453e-8e34-b3f78e2e0ae5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "NTluqaEOf4v5",
+        "outputId": "ca56924c-1807-453e-8e34-b3f78e2e0ae5"
       },
       "execution_count": 43,
       "outputs": [
@@ -1914,11 +1914,11 @@
         "print(response.content)"
       ],
       "metadata": {
-        "id": "BuhaBJRFjv9L",
-        "outputId": "96fc4332-ac92-44dd-f606-1d9ee975f477",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BuhaBJRFjv9L",
+        "outputId": "96fc4332-ac92-44dd-f606-1d9ee975f477"
       },
       "execution_count": 44,
       "outputs": [
@@ -1939,9 +1939,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!pip install pypdf"
+      ],
       "metadata": {
-        "id": "LZjQvsXGlVF0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LZjQvsXGlVF0",
+        "outputId": "6cb92d49-dd2f-4bcb-fc9e-362d52336b9e"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pypdf\n",
+            "  Downloading pypdf-3.12.1-py3-none-any.whl (254 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/254.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m254.8/254.8 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pypdf\n",
+            "Successfully installed pypdf-3.12.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain import OpenAI, PromptTemplate\n",
+        "from langchain.chains.summarize import load_summarize_chain\n",
+        "from langchain.document_loaders import PyPDFLoader\n",
+        "\n",
+        "# Initialize language model\n",
+        "llm = OpenAI(model_name=\"text-davinci-003\", temperature=0)\n",
+        "\n",
+        "# Load the summarization chain\n",
+        "summarize_chain = load_summarize_chain(llm)\n",
+        "\n",
+        "# Load the document using PyPDFLoader\n",
+        "document_loader = PyPDFLoader(file_path=\"path/to/your/pdf/file.pdf\")\n",
+        "document = document_loader.load()\n",
+        "\n",
+        "# Summarize the document\n",
+        "summary = summarize_chain(document)\n",
+        "print(summary['output_text'])"
+      ],
+      "metadata": {
+        "id": "zF4xOXCCmjLO"
       },
       "execution_count": null,
       "outputs": []
